--- a/.config/i3/config
+++ b/.config/i3/config
@@ -125,7 +125,7 @@ font pango:Noto Sans 9
 # they are included here as an example. Modify as you see fit.
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
-# screen before suspend.
+# screen before suspend. Use loginctl lock-session to lock your screen.
 # exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock -c 00000088 -i ~/.wallpaper.jpg --nofork
 exec --no-startup-id xss-lock --transfer-sleep-lock -- ~/bin/lockscreen
